--- a/Resources/views/Default/account-view.html.twig
+++ b/Resources/views/Default/account-view.html.twig
@@ -2,7 +2,6 @@
 {% import 'OroDataGridBundle::macros.html.twig' as dataGrid %}
 
 {% set pageTitle = 'demacmedia_erp.accounts.entity.label'|trans %}
-{% set params = { 'custno': custno, 'entity': entity } %}
 
 {% block stats %}
     {% include 'OroWorkflowBundle:Widget:steps.html.twig' with { 'entity': entity } %}
@@ -18,7 +17,7 @@
         <div class="container-fluid" style="width: auto;">
             <ul class="nav">
                 <li class="active"><a href="#">General Information</a></li>
-                <li class=""><a href="#physical-store-orders">Physical Store Orders</a></li>
+                <li class=""><a href="#physical-store-orders">Web Store Orders</a></li>
             </ul>
         </div>
     </div>
@@ -28,123 +27,76 @@
     <div class="responsive-cell">
         <div class="row-fluid form-horizontal">
                 <div class="responsive-block span6">
+
                     <div class="control-group">
-                        <label class="control-label">Customer Number:</label>
+                        <label class="control-label">First Name:</label>
                         <div class="controls">
-                            <div class="control-label">{{ entity.custno|default('N/A') }}</div>
-                        </div>
-                    </div>
-                    <div class="control-group">
-                        <label class="control-label">Company:</label>
-                        <div class="controls">
-                            <div class="control-label">{{ entity.company|default('N/A') }}</div>
+                            <div class="control-label">{{ entity.firstName|escape|default('N/A') }}</div>
                         </div>
                     </div>
 
                     <div class="control-group">
-                        <label class="control-label">Contact Name:</label>
+                        <label class="control-label">Last Name:</label>
                         <div class="controls">
-                            <div class="control-label"><strong>{{ entity.contactname|default('N/A') }}</strong></div>
+                            <div class="control-label">{{ entity.lastName|escape|default('N/A') }}</div>
                         </div>
                     </div>
 
                     <div class="control-group">
-                        <label class="control-label">Title:</label>
+                        <label class="control-label">Original Email (key):</label>
                         <div class="controls">
-                            <div class="control-label">{{ entity.title|default('N/A') }}</div>
+                            <div class="control-label">{{ entity.originalEmail|escape|default('N/A') }}</div>
                         </div>
                     </div>
 
                     <div class="control-group">
-                        <label class="control-label">Address1:</label>
+                        <label class="control-label">Email:</label>
                         <div class="controls">
-                            <div class="control-label">{{ entity.address1|default('N/A') }}</div>
+                            <div class="control-label">{{ entity.email|escape|default('N/A') }}</div>
                         </div>
                     </div>
 
                     <div class="control-group">
-                        <label class="control-label">Address2:</label>
+                        <label class="control-label">Website ID:</label>
                         <div class="controls">
-                            <div class="control-label">{{ entity.address2|default('N/A') }}</div>
+                            <div class="control-label">{{ entity.websiteId|escape|default('N/A') }}</div>
                         </div>
                     </div>
 
                     <div class="control-group">
-                        <label class="control-label">City:</label>
+                        <label class="control-label">Created At:</label>
                         <div class="controls">
-                            <div class="control-label">{{ entity.city|default('N/A') }}</div>
+                            <div class="control-label">
+                                {{ entity.createdAt ? entity.createdAt|oro_format_datetime : 'N/A'|trans }}
+                            </div>
                         </div>
                     </div>
 
                     <div class="control-group">
-                        <label class="control-label">Address State:</label>
+                        <label class="control-label">Updated At:</label>
                         <div class="controls">
-                            <div class="control-label">{{ entity.addrstate|default('N/A') }}</div>
+                            <div class="control-label">
+                                {{ entity.updatedAt ? entity.updatedAt|oro_format_datetime : 'N/A'|trans }}
+                            </div>
                         </div>
                     </div>
 
                     <div class="control-group">
-                        <label class="control-label">Zip:</label>
+                        <label class="control-label">Imported At:</label>
                         <div class="controls">
-                            <div class="control-label">{{ entity.zip|default('N/A') }}</div>
+                            <div class="control-label">
+                                {{ entity.created ? entity.created|oro_format_datetime : 'N/A'|trans }}
+                            </div>
                         </div>
                     </div>
+
                 </div>
+
+
+
                 <div class="responsive-block span6">
                     <div class="control-group">
-                        <label class="control-label">Country:</label>
-                        <div class="controls">
-                            <div class="control-label">{{ entity.country|default('N/A') }}</div>
-                        </div>
-                    </div>
-
-                    <div class="control-group">
-                        <label class="control-label">Phone:</label>
-                        <div class="controls">
-                            <div class="control-label"><a href="tel:{{ entity.phone }}">{{ entity.phone|default('N/A') }}</a></div>
-                        </div>
-                    </div>
-
-                    <div class="control-group">
-                        <label class="control-label">Phone2:</label>
-                        <div class="controls">
-                            <div class="control-label">{{ entity.phone2|default('N/A') }}</div>
-                        </div>
-                    </div>
-
-                    <div class="control-group">
-                        <label class="control-label">Source:</label>
-                        <div class="controls">
-                            <div class="control-label">{{ entity.source|default('N/A') }}</div>
-                        </div>
-                    </div>
-
-                    <div class="control-group">
-                        <label class="control-label">Type:</label>
-                        <div class="controls">
-                            <div class="control-label">{{ entity.type|default('N/A') }}</div>
-                        </div>
-                    </div>
-
-                    <div class="control-group">
-                        <label class="control-label">email:</label>
-                        <div class="controls">
-                            <div class="control-label"><a href="mailto:{{ entity.email }}">{{ entity.email|default('N/A')|lower }}</a></div>
-                        </div>
-                    </div>
-
-                    <div class="control-group">
-                        <label class="control-label">Comment:</label>
-                        <div class="controls">
-                            <div class="control-label">{{ entity.custmemo|default('N/A') }}</div>
-                        </div>
-                    </div>
-
-                    <div class="control-group">
-                        <label class="control-label">Url:</label>
-                        <div class="controls">
-                            <div class="control-label">{{ entity.url|default('N/A') }}</div>
-                        </div>
+                        <p> &nbsp; </p>
                     </div>
                 </div>
         </div>
@@ -153,13 +105,13 @@
 </div>
 
 <div class="responsive-section responsive-big responsive-section-no-blocks" style="margin-left: 15px;">
-    <h4 class="scrollspy-title">Physical Store Orders for: <strong>{{ entity.contactname|default('N/A')|upper }}</strong></h4>
+    <h4 class="scrollspy-title">Web Orders for: <strong>{{ entity.firstName|escape|default('N/A') }} {{ entity.firstName|escape|default('') }}</strong></h4>
     <div id="physical-store-orders" class="scrollspy-nav-target"></div>
     <div class="row-fluid">
         <div class="form-horizontal">
             <div class="responsive-cell responsive-cell-no-blocks">
                 {% set gridName = 'erp-orders-specific-grid' %}
-                {% set gridFilters = { 'custno': custno } %}
+                {% set gridFilters = { 'original_email': entity.originalEmail } %}
                 {{ dataGrid.renderGrid(gridName, gridFilters) }}
             </div>
         </div>
