--- a/Resources/views/Default/headerStats.html.twig
+++ b/Resources/views/Default/headerStats.html.twig
@@ -1,33 +1,29 @@
-
 <div class="clearfix customer-info well-small">
     <div class="visual">
-        <img alt="{{ entity.contactname }}" src="/bundles/oroui/img/info-user.png">
+        <img alt="{{ entity.firstName|escape }} {{ entity.lastName|escape }}" src="/bundles/oroui/img/info-user.png">
     </div>
     <div class="customer-content pull-left">
         <div class="clearfix">
-            <div class="sub-title"><a href="{{ path('demacmedia_erp_accounts') }}">Physical Store Accounts</a></div>
+            <div class="sub-title"><a href="{{ path('demacmedia_erp_accounts') }}">Web Store Accounts</a></div>
             <span class="separator">/</span>
-            <h1 class="user-name">{{ entity.contactname|capitalize }}</h1>
+            <h1 class="user-name">{{ entity.firstName|capitalize|escape }} {{ entity.lastName|capitalize|escape }}</h1>
         </div>
 
         <div class="clearfix">
             <ul class="inline">
                 <li>
                     {{ 'oro.ui.created_at'|trans }}:
-                    {{ entity.created ? entity.created|oro_format_datetime : 'N/A'|trans }}
-                    {% if entity.contactname %}
-                        {{ entity.contactname|escape }}
-                    {% endif %}
+                    {{ entity.created ? entity.createdAt|oro_format_datetime : 'N/A'|trans }}
                 </li>
                 <li>
                     {{ 'oro.ui.updated_at'|trans }}:
-                    {{ entity.updated ? entity.updated|oro_format_datetime : 'N/A'|trans }}
-                    {% if entity.contactname %}
-                        {{ entity.contactname|escape }}
-                    {% endif %}
+                    {{ entity.updated ? entity.updatedAt|oro_format_datetime : 'N/A'|trans }}
+                </li>
+                <li>
+                    {{ 'demacmedia_erp.orders.imported.label'|trans }}:
+                    {{ entity.created ? entity.created|oro_format_datetime : 'N/A'|trans }}
                 </li>
             </ul>
         </div>
     </div>
-    <hr />
 </div>
