Fix account view

--- a/Resources/views/Default/account-view.html.twig
+++ b/Resources/views/Default/account-view.html.twig
@@ -134,7 +134,7 @@
         <div class="form-horizontal">
             <div class="responsive-cell responsive-cell-no-blocks">
                 {% set gridName = 'erp-orders-specific-grid' %}
-                {% set gridFilters = { 'erpaccount': entity.id } %}
+                {% set gridFilters = { 'contact_email': entity.email|default('0') } %}
                 {{ dataGrid.renderGrid(gridName, gridFilters) }}
             </div>
         </div>
