--- a/Resources/views/Default/orders-specific-view-accounts.html.twig
+++ b/Resources/views/Default/orders-specific-view-accounts.html.twig
@@ -1,16 +1,14 @@
 {% import 'OroDataGridBundle::macros.html.twig' as dataGrid %}
 
-<div class="responsive-section responsive-big responsive-section-no-blocks" style="clear:both;">
-    <div style="padding-left: 20px; padding-right: 20px;">
-        <h4 class="scrollspy-title">
-            <strong>WebStore Orders</strong>
-        </h4>
+<div class="widget-content">
+    <div style="padding-left:20px;">
+        <h4><strong>WebStore Orders</strong></h4>
     </div>
-    <div class="row-fluid">
-        <div class="form-horizontal">
-            <div class="responsive-cell responsive-cell-no-blocks">
-                {{ dataGrid.renderGrid('erp-orders-specific-grid', {contact_email: entity.email|default('0') }) }}
-            </div>
-        </div>
-    </div>
+
+    {{
+        dataGrid.renderGrid('erp-orders-specific-grid', {
+            contact_email: entity.email|default('0')
+        })
+    }}
 </div>
+
