--- a/Resources/views/Account/customLifetimeValue.html.twig
+++ b/Resources/views/Account/customLifetimeValue.html.twig
@@ -1,3 +1,12 @@
-<div class="pull-left label label-warning orocrm-channel-lifetime-value-label">
-    <b>Lifetime Quantity of Orders: {{ dump(entity.number_of_orders_value) }}</b>
-</div>
+<li>
+    <div class="label label-info orocrm-channel-lifetime-value-label">
+        {{ 'orocrm.account.lifetime_value.label'|trans }}:
+        {{ orocrm_channel_account_lifetime(entity)|oro_format_currency }}
+    </div>
+</li>
+
+<li>
+    <div class="label label-warning orocrm-channel-lifetime-value-label">
+        <b>Lifetime Quantity of Orders: {{ number_of_orders_all(entity) }}</b>
+    </div>
+</li>
